@@ -10,6 +10,8 @@
 
 /**
     Provides a custom description to another matcher.
+
+    @b Factory: @ref describedAs
     @ingroup core_matchers
  */
 @interface HCDescribedAs : HCBaseMatcher
