@@ -13,6 +13,7 @@
  
     If the given object is @c nil, the matcher will match @c nil.
  
+    @b Factory: @ref equalTo
     @ingroup core_matchers
  */
 @interface HCIsEqual : HCBaseMatcher
