@@ -10,6 +10,8 @@
 
 /**
     Is the item the same object as another?
+
+    @b Factory: @ref sameInstance
     @ingroup core_matchers
 */
 @interface HCIsSame : HCBaseMatcher
