@@ -10,6 +10,8 @@
 
 /**
     Matches a collection if any element satisfies a given matcher.
+
+    @b Factory: @ref hasItem, @ref hasItems
     @ingroup collection_matchers
  */
 @interface HCIsCollectionContaining : HCBaseMatcher
