@@ -10,6 +10,8 @@
 
 /**
     Matches a collection if its elements, in any order, satisfy a list of matchers.
+
+    @b Factory: @ref containsInAnyOrder
     @ingroup collection_matchers
  */
 @interface HCIsCollectionContainingInAnyOrder : HCBaseMatcher
