@@ -10,6 +10,8 @@
 
 /**
     Matches a collection if its elements, in order, satisfy a list of matchers.
+
+    @b Factory: @ref contains
     @ingroup collection_matchers
  */
 @interface HCIsCollectionContainingInOrder : HCBaseMatcher
