@@ -10,6 +10,8 @@
 
 /**
     Is the object present in the given collection?
+
+    @b Factory: @ref isIn
     @ingroup collection_matchers
  */
 @interface HCIsIn : HCBaseMatcher
