@@ -10,6 +10,8 @@
 
 /**
     Does the object's @c -description satisfy a given matcher?
+
+    @b Factory: @ref hasDescription
     @ingroup object_matchers
  */
 @interface HCHasDescription : HCInvocationMatcher
