@@ -10,6 +10,8 @@
 
 /**
     Tests if a string is equal to another string, regardless of the case.
+
+    @b Factory: @ref equalToIgnoringCase
     @ingroup text_matchers
  */
 @interface HCIsEqualIgnoringCase : HCBaseMatcher
