@@ -10,6 +10,8 @@
 
 /**
     Tests if the argument is a string that contains a substring.
+
+    @b Factory: @ref containsString
     @ingroup text_matchers
  */
 @interface HCStringContains : HCSubstringMatcher
