@@ -10,6 +10,8 @@
 
 /**
     Tests if the argument is a string that ends with a substring.
+
+    @b Factory: @ref endsWith
     @ingroup text_matchers
  */
 @interface HCStringEndsWith : HCSubstringMatcher
