@@ -10,6 +10,8 @@
 
 /**
     Tests if the argument is a string that starts with a substring.
+
+    @b Factory: @ref startsWith
     @ingroup text_matchers
  */
 @interface HCStringStartsWith : HCSubstringMatcher
