@@ -6,6 +6,7 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 
 * Updated project to Xcode 4. iOS framework / documentation / distribution scripts are now external, run from command-line instead of Xcode.
 * Changed sameInstance mismatch description to omit 0x0 address when describing nil argument.
+* Improved documentation by adding Factory headings pointing from implementing classes back to their factories.
 
 
 == Version 1.4 ==
